fixed alignment issues

--- a/flight.css
+++ b/flight.css
@@ -1,3 +1,7 @@
+html{
+  min-height: 100%;
+  position: relative;
+}
 body{
     width:100%;
     height:100%;
@@ -8,12 +12,27 @@ body{
     background-repeat: repeat-y;
 }
 #wrap{
+    position: absolute;
+    background-color:#171716;
+    width:100%;
+    margin:0 auto;
+    padding:0;
+    opacity:0.8;
+    z-index: -1;
+}
+#wrap2{
+    position:absolute;
     background-color:#171716;
     margin:0 auto;
     padding:0;
     opacity:0.8;
-    position:absolute;
     width:100%;
+    top:0;
+    bottom:0;
+    right:0;
+    left:0;
+    z-index: -1;
+    height: 100%;
 }
 .fixedwidth{
     width:1400px;
@@ -76,12 +95,20 @@ ul.horizontal li{
 }
 .mainpagecontent{
     width:100%;
+    height: 100%;
     padding:0;
     margin:0 auto;
     margin-top: 80px;
     border:3px solid #CCC60E;
     background-color:#C7D5E4;
     opacity:0.8;
+    bottom:0;
+    left:0;
+    right:0;
+    top:0;
+}
+.mainpagecontent h2{
+  text-align: center;
 }
 .clear{
     clear:right;
@@ -105,7 +132,7 @@ h3{
     font-size: 15px;
 }
 .mainpagecontent div:nth-child(2){
-  margin-top: 0;
+  
 }
 .itemBox a{
   color: #F0F0EB;
@@ -120,6 +147,10 @@ h3{
 }
 .itemBox iframe{
   margin: 20px;
+}
+#aboutus{
+  text-indent: 2em;
+  font-size: 16px;
 }
 #previews{
   margin: 0 auto;
@@ -139,15 +170,17 @@ h3{
   position: relative;
   text-align: center;
   overflow: hidden;
+  opacity: 100%;
+  background-color:#C7D5E4;
 }
 .previewBox p{
-    position:absolute;
-    left:0;
-    right:0;
-    bottom: 0;
-    margin-left:auto;
-    margin-right:auto;
-    font-size: 24px;
+  position:absolute;
+  left:0;
+  right:0;
+  bottom: 0;
+  margin-left:auto;
+  margin-right:auto;
+  font-size: 24px;
 }
 #selfBow{
   background-image:url("images/selfBowSideView.jpg");
